--- a/.env
+++ b/.env
@@ -29,6 +29,6 @@ APP_SECRET=4ca9e13be127851f51415e4121d2a35d
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#DATABASE_URL=mysql://root:@127.0.0.1:3306/Documentos
-DATABASE_URL=mysql://lucas:39453967Lu_@127.0.0.1:3306/Documentos
+DATABASE_URL=mysql://root:@127.0.0.1:3306/Documentos
+#DATABASE_URL=mysql://lucas:39453967Lu_@127.0.0.1:3306/Documentos
 ###< doctrine/doctrine-bundle ###
