--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,5 +23,7 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
     access_control:
+         - { path: ^/superadmin, roles: ROLE_SUPERADMIN }
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/editor, roles: ROLE_EDITOR }
+         - { path: ^/lector, roles: ROLE_LECTOR }
