Se agrega notificaciones en login

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,9 @@ security:
             logout:
                 path: app_logout
                 target: /login
+            guard:
+                authenticators:
+                    - App\Security\SecurityControllerAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
